# librpiplusplus

./: .gitignore  CMakeLists.txt  librpiplusplus.kdev4
include/: GPIO.h  I2CDevice.h
src/: GPIO.cpp  I2CDevice.cpp
